# pip-abandoned

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  release.sh  version.py
.github/workflows/: publish.yml  test.yml
pip_abandoned/: __init__.py  __version__.py  cli.py  lib.py
tests/: test_args.py  test_e2e.py  test_lib.py  test_pip_abandoned.py
tests/fixture_data/home-page-1.0.0.dist-info/: METADATA
tests/fixture_data/inactive-1.0.0.dist-info/: METADATA
tests/fixture_data/multiple-matches-1.0.0.dist-info/: METADATA
tests/fixture_data/project-urls-1.0.0.dist-info/: METADATA
tests/fixture_data/readme-1.0.0.dist-info/: METADATA
