[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pip-abandoned"
authors = [{name = "chris48s", email = "git@chris-shaw.dev"}]
description = "Search for abandoned and deprecated python packages"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "keyring>=19",
    "requests>=2,<3",
    "rich>=12",
    "importlib-metadata>=4.6; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "flit==3.12.0",
    "isort==5.13.2",
    "flake8==7.1.2",
    "black==24.8.0",
    "pytest==8.3.5",
    "pytest-cov==6.2.0",
    "responses==0.25.7",
]

[project.urls]
Home = "https://github.com/chris48s/pip-abandoned"
Source = "https://github.com/chris48s/pip-abandoned"

[tool.flit.module]
name = "pip_abandoned"

[project.scripts]
pip-abandoned = "pip_abandoned:main"
