[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pip-abandoned"
authors = [{name = "chris48s", email = "git@chris-shaw.dev"}]
description = "Search for abandoned and deprecated python packages"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "keyring>=19",
    "requests>=2,<3",
    "rich>=12",
]

[project.optional-dependencies]
dev = [
    "flit==3.12.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "black==25.12.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "responses==0.25.8",
]

[project.urls]
Home = "https://github.com/chris48s/pip-abandoned"
Source = "https://github.com/chris48s/pip-abandoned"

[tool.flit.module]
name = "pip_abandoned"

[project.scripts]
pip-abandoned = "pip_abandoned:main"
